<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/security_header">
        <SwitchPreferenceCompat
            app:key="biometric"
            app:title="@string/enable_biometrics"
            app:summary="@string/biometrics_summary"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/user_interface">
        <SwitchPreferenceCompat
            app:key="notifications"
            app:title="Enable notifications"
            app:summary="@string/notification_reminders" />

        <ListPreference
            app:key="language"
            app:title="@string/language"
            app:dialogTitle="@string/language"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="help_category"
        app:title="@string/help">
        <Preference
            app:key="feedback"
            app:summary="Report technical issues or suggest new features"
            app:title="Send feedback"/>
    </PreferenceCategory>
</PreferenceScreen>